2008-10-09  Jakub Jelinek  <jakub@redhat.com>

	* tree-ssa-live.c (remove_unused_locals): Mark all edge's goto_block
	as used.
	* gimple-low.c (lower_function_body, lower_gimple_return,
	lower_builtin_setjmp): Set gimple_block on the newly created stmts.
	* tree-cfg.c (make_cond_expr_edges, make_goto_expr_edges): Only set
	goto_block on edges if goto_locus is known.

2008-10-08  Jakub Jelinek  <jakub@redhat.com>

	* graphite.c (gloog): Don't call find_unreachable_blocks
	before delte_unreachable_blocks.

	* cfgexpand.c (expand_gimple_cond): Convert also goto_block and
	goto_locus of true_edge into RTL locator.

2008-10-08  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/i386.md (*jcc_btdi_rex64): Clobber FLAGS_REG.
	(*jcc_btdi_mask_rex64): Ditto.
	(*jcc_btsi): Ditto.
	(*jcc_btsi_mask): Ditto.
	(*jcc_btsi_1): Ditto.
	(*jcc_btsi_mask_1): Ditto.

2008-10-08  Paul Brook  <paul@codesourcery.com>

	* config/arm/bpabi.h (ARM_FUNCTION_PROFILER): Define new EABI
	compatible profiler (__gnu_mcount_nc).
	(SUBTARGET_FRAME_POINTER_REQUIRED): Define.

2008-10-08  H.J. Lu  <hongjiu.lu@intel.com>

	* config/i386/i386.c (initial_ix86_tune_features): Add
	X86_TUNE_USE_VECTOR_FP_CONVERTS.
	* config/i386/i386.h (ix86_tune_indices): Likewise.
	(TARGET_USE_VECTOR_FP_CONVERTS): New.

	* config/i386/i386.md: Check TARGET_USE_VECTOR_FP_CONVERTS
	instead of (TARGET_USE_VECTOR_CONVERTS || TARGET_GENERIC)
	for FP to FP splitters.

2008-10-08  H.J. Lu  <hongjiu.lu@intel.com>

	* config/i386/i386.md: Add missing gen_sse2_cvtdq2p to convert
	splitter.

2008-10-08  Jakub Jelinek  <jakub@redhat.com>

	PR target/36635
	PR target/37290
	PR rtl-optimization/37341
	* cse.c (cse_cc_succs): Add ORIG_BB argument, don't follow edges
	to ORIG_BB, pass through ORIG_BB recursively.
	(cse_condition_code_reg): Adjust caller.

2008-10-08  Kai Tietz  <kai.tietz@onevision.com>

	* sdbout.c (sdbout_one_type): Treat the value type
	CONST_DECL for enumerals.

2008-10-07  H.J. Lu  <hongjiu.lu@intel.com>
